[package]
name = "klocki"
version = "0.1.1"
authors = ["Piotr Szczygieł <szczygiel.p@gmail.com>"]
edition = "2018"

description = "An arcade game"
license = "MIT"
readme = "README.md"
categories = ["games"]
repository = "https://github.com/piotrek-szczygiel/klocki"

[profile.dev]
opt-level = 1

[dependencies]
log = "0.4"
env_logger = "0.6"

rand = "0.7"
rand_distr = "0.2"

ggez = "0.5"

serde = { version = "1.0", features = ["derive"] }
toml = "0.5"

gfx_core = "0.9"
gfx_device_gl = "0.16"

imgui = "0.2"
imgui-gfx-renderer = "0.2"

[build-dependencies]
walkdir = "2.2"
winres = "0.1"
zip = "0.5"

[package.metadata.bundle]
identifier = "dev.szczygiel.klocki"
icon = ["resources/icon.ico"]
category = "Game"
deb_depends = ["libasound2", "libudev1"]
